Fixed: z-index post modal

--- a/src/components/newPostModal/NewPostModal.module.css
+++ b/src/components/newPostModal/NewPostModal.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 999;
     padding-top: 3px;
     margin: 0;
 }
